--- a/index.html
+++ b/index.html
@@ -1,32 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Typing Website</title>
-    <link rel="stylesheet" href="index.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500&family=Oswald:wght@200&display=swap" rel="stylesheet">
-    
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="index.css">
+  <script src="index.js" defer></script>
+  <title>Speed Typing</title>
 </head>
-<main>
-<div id="header">
-    <h1 id="title">Test Typing Website</h1>
-</div>
-<div id="data">
-    <div id="timer">1</div>
-    <div id="buttons">
-        <button onclick="newGame()">Restart</button>
-    </div>
-</div>
-<div id="test">
-    <div id="words"></div>
-    <div id="cursor"></div>
-</div>
-</main>
-<script src="index.js"></script>
 <body>
-    
+  <div class="timer" id="timer"></div>
+  <div class="container">
+    <div class="quote-display" id="quoteDisplay"></div>
+    <textarea id="quoteInput" class="quote-input" autofocus></textarea>
+  </div>
 </body>
 </html>
